# fantasy-draft-assistant

./: README.md  pyproject.toml
fantasy_draft_assistant/: draft_agent.py
shipp_fantasy/: __init__.py  external_stats.py
skills/fantasy-draft-assistant/: README.md  SKILL.md
skills/fantasy-draft-assistant/references/: gui-spec.md  setup.md
skills/fantasy-draft-assistant/scripts/: draft_agent.py
skills/fantasy-draft-assistant/tests/: test_draft.py
