[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fantasy-draft-assistant"
version = "0.1.0"
description = "Fantasy sports draft recommendations combining live game performance with season stats"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]
keywords = ["fantasy-sports", "draft", "nba", "mlb", "shipp", "fantasy-basketball", "fantasy-baseball"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/buildkit-ai/fantasy-draft-assistant"
Repository = "https://github.com/buildkit-ai/fantasy-draft-assistant"

[tool.hatch.build.targets.wheel]
packages = ["fantasy_draft_assistant"]
